<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.presidentielles2017.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="479dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textViewProposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonMLP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_MLP"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toRightOf="@+id/buttonNDA"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonEM" />

            <Button
                android:id="@+id/buttonNDA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_NDA"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toRightOf="@+id/buttonJLM"
                app:layout_constraintRight_toLeftOf="@+id/buttonEM"
                app:layout_constraintTop_toBottomOf="@+id/buttonBH" />

            <Button
                android:id="@+id/buttonFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_FF"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonJLM" />

            <Button
                android:id="@+id/buttonBH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_BH"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toRightOf="@+id/buttonJLM"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonEM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_EM"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toRightOf="@+id/buttonBH"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonJLM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="10sp"
                android:onClick="candidateClick"
                android:text="@string/candidate_JLM"
                android:textAlignment="center"
                android:textSize="10sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/textViewScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="makeNewQuestion"
                android:text="@string/new_question"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confusion_matrix"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
